--- a/group_vars/batch.yml
+++ b/group_vars/batch.yml
@@ -2,4 +2,4 @@
 become_user: "ec2-user"
 apt_install:
   # 共通パッケージインストール
-  - { name: "jq", state: "present", update_cache: "yes" }
+  - { name: "nginx", state: "present" }
